[tool.poetry]
name = "pyofferup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
packages = [{include = "pyOfferUp"}]


[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
setuptools = { version = "^69.0.3", markers = "python_version >='3.12'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
